# Reallium

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  requirements.txt
cloud/: Dockerfile
cloud/api/: config.py  main.py
cloud/api/middleware/: auth.py  rate_limit.py
cloud/api/routes/: auth.py  detection.py  models.py
cloud/database/: database.py  init.sql  migrate.py  models.py
cloud/services/: auth_service.py  detection_service.py  model_service.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  FIELD_OPERATIVE_GUIDE.md
edge_agent/: CMakeLists.txt
edge_agent/core/: detector.cpp  detector.h  inference_engine.cpp  inference_engine.h
edge_agent/offline/: cache_manager.cpp  cache_manager.h
edge_agent/security/: auth_manager.cpp  auth_manager.h  firmware_verifier.cpp  firmware_verifier.h
models/: __init__.py  audio_detector.py  multimodal_fusion.py  video_detector.py
scripts/: build_android.sh  build_ios.sh
tests/integration/: test_cloud_api.py
tests/mock_attacks/: generate_deepfakes.py
tests/unit/: test_audio_detector.py  test_video_detector.py
training/: model_compression.py
